# openhare

./: .gitignore  .gitmodules  Makefile  README.md  windows_build.ps1  windows_setup.iss
.cursor/rules/: common.mdc
client/: .gitignore  build.yaml  pubspec.yaml
client/lib/: app.dart  main.dart  menu_page.dart  sql_edit_page.dart
client/lib/core/: conn.dart  conn.g.dart
client/lib/l10n/: app_en.arb  app_zh.arb
client/lib/models/: ai.dart  ai.freezed.dart  ai.g.dart  connection.dart  instance_metadata.dart  instance_metadata.freezed.dart  instances.dart  instances.freezed.dart  instances.g.dart  interface.dart  interface.freezed.dart  objectbox-model.json  objectbox.dart  objectbox.g.dart  session_conn.dart  session_conn.freezed.dart  session_sql_result.dart  session_sql_result.freezed.dart  session_sql_result.g.dart  sessions.dart  sessions.freezed.dart  sessions.g.dart  settings.dart  settings.freezed.dart  (+5 more)
client/test/: widget_test.dart
client/windows/: CMakeLists.txt
common/: pubspec.yaml
common/lib/: parser.dart
pkg/db_driver/: .flutter-plugins  .flutter-plugins-dependencies  pubspec.yaml
pkg/db_driver/impl/mysql/rust/: Cargo.toml
pkg/db_driver/impl/mysql/rust/src/: frb_generated.rs
pkg/db_driver/impl/mysql/rust/src/api/: mod.rs  mysql.rs
pkg/sql_parser/: build.yaml  pubspec.yaml
server/: pubspec.yaml
sql_parser/: pubspec.yaml
sql_parser/example/: sql_parser_example.dart
sql_parser/lib/: builder.dart  sql_parser.dart
sql_parser/test/: lexer_test.dart  scanner_test.dart  spliter_test.dart  sql_parser_test.dart  sql_spliter_test.dart
(+238 files in other folders)
